--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 *{
     margin: 0 auto;
     padding: 0;
-    background-color: aqua;
+    background-color: yellow;
 }
 .main-container{
     width: 100%;
